# failurebase_sdk

./: .gitignore  pyproject.toml
requirements/: atest.txt
src/failurebase_sdk/: client.py  utils.py
src/failurebase_sdk/robot/: watcher.py
tests/atests/: tests.py
tests/atests/resources/robot_test/: keywords.py  test.robot
tests/atests/resources/server_mock/: app.py
